--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <button id="button1">BUTTON 1</button>
+    <div id="container">
+      <canvas id="canvas1"></canvas>
+      <audio id="audio1" controls></audio>
+      <input type="file" id="fileUpload" accept="audio/*" />
+    </div>
 
     <script src="script.js"></script>
   </body>
